testsuite/tests/typecheck/should_fail/T14048a.hs
{-# LANGUAGE ConstraintKinds #-}
module T14048a where

import Data.Kind

data Foo :: Constraint
